# agentcore-rl-toolkit

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude/skills/check-cloudwatch-session-logs/: SKILL.md
.github/workflows/: docs.yml  pre-commit.yml  publish.yml  sandboxd.yml  unit-tests.yml
docs/roadmap/committed/: core-api-rename.md  slime-data-contract.md  slime-runner-entrypoint.md
docs/roadmap/done/: slime-data-contract.md
docs/site/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
docs/site/scripts/: gen_api.py
docs/site/src/components/: StagingBanner.astro
docs/site/src/content/docs/: index.mdx
docs/site/src/content/docs/api/: index.md
docs/site/src/content/docs/api/backends/slime/: patches.md  runner.md
docs/site/src/content/docs/api/core/: app.md  client.md  reward.md
docs/site/src/content/docs/blog/: index.mdx  training-multi-step-agents-rl.mdx
docs/site/src/content/docs/examples/: index.mdx  strands-appworld-agent.md  strands-math-agent.md  strands-migration-agent.md  strands-officebench-agent.md
docs/site/src/content/docs/guides/: agent-adaptation.mdx  overview.mdx  rllm-backend-setup.md  slime-backend-setup.md  verl-backend-setup.md
docs/site/src/content/docs/troubleshooting/: rllm.md  slime.md  verl.md
docs/site/src/styles/: custom.css
examples/sandbox_quickstart/: .gitignore  Dockerfile  README.md  build_and_push.sh  config.example.toml  deploy.py  pyproject.toml  run_sandbox.py
examples/strands_appworld/: .env.example  Dockerfile  README.md  appworld_system_prompt.yaml  appworld_utils.py  compat.py  constants.py  eval_utils.py  evaluate.py  evaluate_async.py  managed_process.py  pyproject.toml  reward.py  rl_app.py
examples/strands_appworld_agent/: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  evaluate.py  few_shot_example.py  pyproject.toml  reward.py  rl_app.py
examples/strands_math_agent/: README.md  basic_app.py  evaluate.py  pyproject.toml  reward.py  rl_app.py  rl_app_with_tokens.py
examples/strands_math_agent/.bedrock_agentcore/strands_math_agent_dev/: Dockerfile
examples/strands_migration_agent/: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  deploy.py  dev_app.py  entrypoint.sh  eval_utils.py  evaluate.py  evaluate_async.py  maven-settings.xml  models.py  preprocess.py  pyproject.toml  reward.py  rl_app.py  utils.py  vllm_model.py
examples/strands_migration_agent/.bedrock_agentcore/aws_maven_mirror/: Dockerfile
examples/strands_migration_agent/.bedrock_agentcore/public_maven/: Dockerfile
examples/strands_officebench_agent/: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  build.sh  config.example.toml  dev_app.py  evaluate.py  models.py  preprocess.py  pyproject.toml  reward.py  rl_app.py  run_local_eval.py  test_local.py  tools.py  utils.py
examples/strands_taubench_agent/: README.md  constants.py  pyproject.toml  reward.py  rl_app.py  test_local.py  utils.py
examples/strands_taubench_agent/.bedrock_agentcore/strands_taubench_agent_rl_test/: Dockerfile
examples/strands_taubench_agent/tasks/: airline_example.json  retail_example.json  telecom_example.json
roadmaps/draft/: sandbox_dynamic_environments.md
sandboxd/: README.md  build.sh  go.mod  main.go  main_test.go
scripts/: build_docker_image_and_push_to_ecr.sh
src/agentcore_rl_toolkit/: __init__.py  app.py  client.py  logging.py
src/agentcore_rl_toolkit/backends/slime/: SETUP.md  runner.py
src/agentcore_rl_toolkit/backends/slime/examples/math_agent/: .wandb.env.example  config.yaml.example  eval.sh  train.sh
src/agentcore_rl_toolkit/backends/slime/integration/: gateway.py  rewards.py  rollout.py  traces.py
src/agentcore_rl_toolkit/backends/slime/patches/: sglang_token_ids.py  sglang_token_ids_v_0_5_12.py  verify_sglang_token_ids.py
src/agentcore_rl_toolkit/backends/slime/scripts/: install_slime.sh
src/agentcore_rl_toolkit/backends/verl/: __init__.py  config.py  dataset.py  llm_server.py  loop_manager.py  main.py  trainer.py  vllm_replica.py
src/agentcore_rl_toolkit/backends/verl/config/: agentcore_grpo.yaml
src/agentcore_rl_toolkit/backends/verl/examples/math_agent/: preprocess_gsm8k.py  run_agentcore_grpo.sh
src/agentcore_rl_toolkit/backends/verl/scripts/: install_megatron.sh
src/agentcore_rl_toolkit/frameworks/strands/: app.py  rllm_model.py  rollout_collector.py  vllm_model.py
src/agentcore_rl_toolkit/rollout_gateway/: __init__.py  gateway.py  parsing.py  render.py  trace.py  trajectory.py
src/agentcore_rl_toolkit/rollout_gateway/adapters/: __init__.py  anthropic.py  common.py  openai.py
src/agentcore_rl_toolkit/rollout_gateway/sampling_backends/: __init__.py  base.py  sglang_http.py  tinker_sdk.py  vllm_http.py
src/agentcore_rl_toolkit/sandbox/: __init__.py  client.py  types.py
tests/: test_async_client.py  test_client.py  test_logging.py  test_rollout_entrypoint.py  test_slime_rollout_payload.py  test_slime_runner.py
tests/rollout_gateway/: test_adapters.py  test_gateway_integration.py  test_render.py  test_trajectory.py
tests/rollout_gateway/integration_test/: run_e2e.sh
tests/rollout_gateway/integration_test/sglang/: pyproject.toml  test_e2e_qwen_sglang.py
tests/rollout_gateway/integration_test/vllm/: pyproject.toml  test_e2e_qwen_vllm.py
tests/sandbox/: test_client.py  test_types.py
