[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcore-rl-toolkit"
version = "0.1.3"
description = "Toolkit for Seamlessly Enabling RL Training with Bedrock AgentCore."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Amazon Web Services - Labs", email = "opensource@amazon.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "bedrock-agentcore>=1.0.3",
    "bedrock-agentcore-starter-toolkit>=0.2.0",
    "boto3>=1.40.55",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
slime = [
    # Proxy that sits between the agent and SGLang during training, capturing
    # token IDs and logprobs into TraceRecords that slime consumes as Samples.
    # Required by agentcore_rl_toolkit.backends.slime.{gateway,rollout,traces}.
    "rllm-model-gateway>=0.1.0",
]
rllm = [
    # rllm training framework. Not on PyPI — installed from GitHub.
    # rllm pulls in rllm-model-gateway transitively for trajectory capture.
    # Users still need to install a training backend (verl or Tinker)
    # separately per rllm's instructions.
    #
    # NOTE: do not depend on rllm's own [agentcore] extra here — it pulls
    # in agentcore-rl-toolkit, which would create a circular dependency.
    #
    # The git source is declared in [tool.uv.sources] below rather than inline
    # here, because PyPI rejects direct-reference (git URL) dependencies in
    # uploaded packages. uv reads the source when installing from the repo.
    "rllm",
]
verl = [
    "transformers>=5.5.3",
    "numpy",
    "verl==0.8.0",
    "ray",
    "torch>=2.10.0",
    "torchvision>=0.23.0",
    "vllm==0.21.0",
    "flash-attn==2.8.3",
    "qwen-vl-utils",
    "rllm-model-gateway>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/awslabs/agentcore-rl-toolkit"

[tool.uv]
override-dependencies = [
    "numpy>=1.26.0",
]

[tool.uv.sources]
# rllm is not published to PyPI; install it from GitHub. The git source is
# declared here rather than inline in [project.optional-dependencies] so the
# published package metadata stays free of direct-reference (git URL)
# dependencies, which PyPI rejects. uv reads this source when installing the
# [rllm] extra from a checkout of this repo.
rllm = { git = "https://github.com/rllm-org/rllm.git" }

[tool.uv.extra-build-dependencies]
flash-attn = [
    { requirement = "torch", match-runtime = true },
]

[tool.hatch.metadata]
# Required so the [rllm] optional extra can pin rllm via a git URL
# (PEP 508 direct reference). Hatchling rejects these by default.
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]

[tool.ruff.lint.isort]
known-first-party = ["agentcore_rl_toolkit"]
