[project]
name = "strands-migration-agent-example"
version = "0.1.0"
description = "Example: Strands Java Code Migration Agent using Bedrock AgentCore RL Toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.0.3",
    "bedrock-agentcore-starter-toolkit>=0.2.0",
    "boto3>=1.40.55",
    "python-dotenv>=1.0.0",
    "strands-agents[openai]>=1.18.0",
    "strands-agents-tools>=0.2.16",
    "migrationbench",
    "java-migration-agent",
]

[tool.setuptools]
py-modules = ["rl_app", "reward", "models", "utils"]

[tool.uv.sources]
migrationbench = { git = "https://github.com/amazon-science/MigrationBench.git", rev = "19acd9eb3a402d825f200eb14cf01584eaa1f6e9" }
java-migration-agent = { git = "https://github.com/amazon-science/JavaMigration.git", subdirectory = "java_migration_agent" }
